// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography component Component matches snapshot H1 renders correctly 1`] = `
<Text
  color="black"
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 32,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
    ]
  }
>
  Abc 123
</Text>
`;

exports[`Typography component Component matches snapshot H2 renders correctly 1`] = `
<Text
  color="black"
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
    ]
  }
>
  Abc 123
</Text>
`;

exports[`Typography component Component matches snapshot H3 renders correctly 1`] = `
<Text
  color="black"
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 18.72,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
    ]
  }
>
  Abc 123
</Text>
`;

exports[`Typography component Component matches snapshot H4 renders correctly 1`] = `
<Text
  color="black"
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
    ]
  }
>
  Abc 123
</Text>
`;

exports[`Typography component Component matches snapshot H5 renders correctly 1`] = `
<Text
  color="black"
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 13.28,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
    ]
  }
>
  Abc 123
</Text>
`;

exports[`Typography component Component matches snapshot H6 renders correctly 1`] = `
<Text
  color="black"
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 10.72,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
    ]
  }
>
  Abc 123
</Text>
`;

exports[`Typography component Component matches snapshot Text renders correctly 1`] = `
<Text
  color="black"
  size="md"
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  Abc 123
</Text>
`;
